# coup-rs

./: .gitignore  Cargo.toml  readme.md
benches/: bench_coup.rs
src/: action.rs  ai.rs  coup.rs  lib.rs  main.rs
