[package]
name = "coup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
csv = "1.3.0"

[profile.release]
debug = true

[[bench]]
name = "bench_coup"
harness = false